# rust-rapidsnark-test

./: Cargo.toml  Config.toml  build.rs
.github/workflows/: build-and-test.yml
MoproAndroidBindings/uniffi/mopro/: mopro.kt
MoproiOSBindings/: mopro.swift
MoproiOSBindings/MoproBindings.xcframework/: Info.plist
android/app/src/main/java/com/example/moproapp/: MultiplierComponent.kt
ios/MoproApp.xcodeproj/: project.pbxproj
ios/MoproiOSBindings/MoproBindings.xcframework/: Info.plist
ios/MoproiOSBindings/MoproBindings.xcframework/ios-arm64-simulator/Headers/mopro_example_app/: mopro_example_appFFI.h
src/: lib.rs
