
[package]
name = "mopro-example-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["mopro-ffi/circom"]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git", features = [
    "uniffi",
    "witnesscalc",
    "rapidsnark"
] }
# rust-witness = { git = "https://github.com/chancehudson/rust-witness.git", branch = "fix-link" }
witnesscalc-adapter = { path = "../witnesscalc_adapter/witnesscalc_adapter" }
num-bigint = "0.4.0"
thiserror = "2.0.12"
# HALO2_DEPENDENCIES

# NOIR_DEPENDENCIES

[build-dependencies]
# rust-witness = { git = "https://github.com/chancehudson/rust-witness.git", branch = "fix-link" }
witnesscalc-adapter = { path = "../witnesscalc_adapter/witnesscalc_adapter" }
rust-rapidsnark = { path = "../rust-rapidsnark/crates" }