
[package]
name = "mopro-example-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["mopro-ffi/circom"]
no_uniffi_exports = []

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git", features = [
    "uniffi",
    # "witnesscalc",
    "rapidsnark",
] }
rust-witness = { version = "0.1.6" }
# witnesscalc-adapter = { path = "../witnesscalc_adapter/witnesscalc_adapter" }
num-bigint = "0.4.0"
thiserror = "2.0.12"
# HALO2_DEPENDENCIES

# NOIR_DEPENDENCIES

[build-dependencies]
rust-witness = { version = "0.1.6" }
# witnesscalc-adapter = { path = "../witnesscalc_adapter/witnesscalc_adapter" }
rust-rapidsnark = { git = "https://github.com/zkmopro/rust-rapidsnark.git", branch = "bump-version" }
